docs/cobblemon-tags/1.7.0/spawnPresetList.md
# Spawn Presets

This file contains all current spawn presets of cobblemon.

[[_TOC_]]

# Spawn Preset List

## ancient_city

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **maxY** | `62` |  |
| **neededNearbyBlocks** | `#cobblemon:ancient_city_blocks` |  |
| **structures** | `minecraft:ancient_city` |  |
## derelict

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **canSeeSky** | `False` |  |
| **maxLight** | `0` |  |
| **neededBaseBlocks** |  | `#cobblemon:natural` |
## desert_pyramid

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **minY** | `62` |  |
| **neededBaseBlocks** |  | `minecraft:blue_terracotta`; `minecraft:orange_terracotta` |
| **neededNearbyBlocks** | `#cobblemon:desert_pyramid_blocks` |  |
| **structures** | `minecraft:desert_pyramid` |  |
## end_city

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededBaseBlocks** | `minecraft:end_stone_bricks`; `minecraft:purpur_block`; `minecraft:purpur_pillar` |  |
| **neededNearbyBlocks** | `#cobblemon:end_city_blocks` |  |
| **structures** | `minecraft:end_city` |  |
## foliage

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededNearbyBlocks** | `#minecraft:leaves`; `#c:leaves` |  |
## illager_structures

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **minY** | `62` |  |
| **structures** | `minecraft:pillager_outpost`; `minecraft:swamp_hut`; `minecraft:mansion` |  |
## jungle_pyramid

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **minY** | `62` |  |
| **neededBaseBlocks** | `minecraft:cobblestone`; `#minecraft:mossy_cobblestone` |  |
| **neededNearbyBlocks** | `#cobblemon:jungle_pyramid_blocks` |  |
| **structures** | `minecraft:jungle_pyramid` |  |
## lava

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **fluid** | `#minecraft:lava` |  |
## mansion

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **minY** | `62` |  |
| **neededBaseBlocks** | `minecraft:birch_planks`; `minecraft:double_smooth_stone_slab`; `minecraft:oak_planks`; `minecraft:polished_andesite`; `#minecraft:wool`; `#minecraft:wool_carpets` |  |
| **neededNearbyBlocks** | `#cobblemon:mansion_blocks` |  |
| **structures** | `minecraft:mansion` |  |
## mansion_dining

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **minY** | `62` |  |
| **neededBaseBlocks** | `minecraft:birch_planks`; `minecraft:double_smooth_stone_slab`; `minecraft:oak_planks`; `minecraft:polished_andesite`; `#minecraft:wool`; `#minecraft:wool_carpets` |  |
| **neededNearbyBlocks** | `minecraft:light_grey_carpet`; `minecraft:magenta_carpet`; `minecraft:white_carpet` |  |
| **structures** | `minecraft:woodland_mansion/1x1_b2`; `minecraft:woodland_mansion/1x2_c1`; `minecraft:woodland_mansion/2x2_b1`; `minecraft:woodland_mansion/2x2_b2` |  |
## natural

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededBaseBlocks** | `#cobblemon:natural` | `minecraft:farmland` |
## nether_fossil

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededNearbyBlocks** | `minecraft:bone_block` |  |
| **structures** | `minecraft:nether_fossil` |  |
## nether_structures

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededBaseBlocks** | `minecraft:chiseled_polished_blackstone`; `minecraft:cracked_polished_blackstone_bricks`; `minecraft:gilded_blackstone`; `minecraft:nether_bricks`; `minecraft:polished_basalt`; `minecraft:polished_blackstone_bricks` |  |
| **neededNearbyBlocks** | `#cobblemon:nether_structure_blocks` |  |
| **structures** | `minecraft:bastion_remnant`; `minecraft:fortress` |  |
## ocean_monument

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **maxY** | `62` |  |
| **structures** | `minecraft:monument` |  |
## ocean_ruins

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **maxY** | `62` |  |
| **neededNearbyBlocks** | `#cobblemon:ocean_ruin_blocks` |  |
| **structures** | `#minecraft:ocean_ruin` |  |
## pillager_outpost

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **minY** | `62` |  |
| **neededNearbyBlocks** | `#cobblemon:pillager_outpost_blocks` |  |
| **structures** | `minecraft:pillager_outpost` |  |
## redstone

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededBaseBlocks** |  | `#cobblemon:redstone_blocks` |
| **neededNearbyBlocks** | `#minecraft:redstone_ores`; `#cobblemon:redstone_blocks`; `#c:redstone_ores` |  |
## ruined_portal

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededNearbyBlocks** | `ruined_portal_blocks` |  |
| **structures** | `#minecraft:ruined_portal` |  |
## saccharine_tree

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededNearbyBlocks** | `cobblemon:saccharine_leaves`; `cobblemon:saccharine_log`; `cobblemon:saccharine_wood`; `cobblemon:stripped_saccharine_log`; `cobblemon:stripped_saccharine_wood` |  |
## salt

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **biomes** | `biomesoplenty:hot_springs`; `biomesoplenty:wasteland`; `biomesoplenty:wasteland_steppe`; `terralith:amethyst_canyon`; `terralith:amethyst_rainforest`; `terralith:skylands_winter`; `terralith:yellowstone`; `wythers:calcite_caverns`; `wythers:calcite_coast`; `wythers:mediterranean_island_thermal_spring`; `wythers:salt_lakes_pink`; `wythers:salt_lakes_turquoise`; `wythers:salt_lakes_white`; `wythers:thermal_taiga` |  |
## stronghold

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **maxY** | `62` |  |
| **neededBaseBlocks** | `#minecraft:stone_bricks` |  |
| **neededNearbyBlocks** | `minecraft:cracked_stone_bricks`; `minecraft:mossy_stone_bricks` |  |
| **structures** | `minecraft:stronghold` |  |
## trail_ruins

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **minY** | `32` |  |
| **neededBaseBlocks** | `#minecraft:convertable_to_mud`; `#minecraft:sand`; `#minecraft:trail_ruins_replaceable`; `#cobblemon:trail_ruins_blocks`; `minecraft:cobblestone`; `minecraft:stone`; `minecraft:stone_bricks` |  |
| **neededNearbyBlocks** | `#cobblemon:trail_ruins_blocks` |  |
| **structures** | `minecraft:trail_ruins` |  |
## treetop

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededBaseBlocks** | `#cobblemon:trees` |  |
## urban

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededNearbyBlocks** | `#cobblemon:concrete_blocks` |  |
| **structures** |  | `#minecraft:village`; `minecraft:trail_ruins` |
## water

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **fluid** | `#minecraft:water` |  |
## webs

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **biomes** | `biomesoplenty:spider_nest`; `terralith:cave/infested_caves`; `wythers:forbidden_forest`; `wythers:phantasmal_forest`; `wythers:phantasmal_swamp` |  |
## wild

| Key | Conditions | Anticonditions |
| --- | ---------- | -------------- |
| **neededNearbyBlocks** |  | `#cobblemon:concrete_blocks` |
| **structures** |  | `#minecraft:village` |
